<resources>
    <string name="app_name">FItnesAppMember</string>
    <string name="log_in">Log in</string>
    <string name="home">Home</string>
    <string name="add_member">Add Member</string>
    <string name="fee_pending">Fee Pending</string>
    <string name="add_update_fee">Add/Update Fee</string>
    <string name="setting">Setting</string>
    <string name="change_password_mobile">Change Password/Mobile</string>
    <string name="log_out">Log Out</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="gym_membership_price">Gym Membership price</string>
    <string name="_1_month_fee">1 Month Fee :</string>
    <string name="_0_00">0.00</string>
    <string name="_2_months">2 Months :</string>
    <string name="_3_months">3 Months :</string>
    <string name="_6_months">6 Months :</string>
    <string name="_1_year">1 Year :</string>

    <string-array name="membership">
        <item>Select</item>
        <item>1 Month</item>
        <item>2 Months</item>
        <item>3 Months</item>
        <item>6 Months</item>
        <item>1 Year</item>

    </string-array>
</resources>